tests/regression/errors/basic/type_error_5.csd
// Type error test 5
sus number drip = 5
sus text tea = "string_5"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 5:", wrong)
